--- a/vignettes/Working_with_the_exhaustiveRasch_package.Rmd
+++ b/vignettes/Working_with_the_exhaustiveRasch_package.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 
 ### 2.1 Pre-define item combinations: *apply_combo_rules()*
 
-You can use the apply_combo_rules function to define rules for item combinations to be recongnized or permitted in the candidate models. The function needs the full parameter, a vector of numeric values for the item indices of the full item set to be processed. For example, if the function should be applies to a full set of 10 items, the full parameter must be set to 1:10.
+You can use the apply_combo_rules function to define rules for item combinations to be recongnized or permitted in the candidate models. The function needs the full parameter, a vector of numeric values for the item indices of the full item set to be processed. For example, if the function should be applied to a full set of 10 items, the full parameter must be set to 1:10.
 
 You can define the length of the scales by setting the *combo_length* parameter. This parameter can be a single numeric value or a vector of numeric values. with *combo_length=6* only combinations of 6 items are selected. with *combo_length=4:6* only combinations with at least 4 and not more than 6 items are selected. with *combo_length c(4,7,8)* only combinations with 4,7 and 8 items are selected. If not specified, all scale length between 3 and the maximum number of items in full will be used.
 
@@ -75,11 +75,11 @@ Provide the data to analyze as a data.frame using the *dset* parameter.
 
 At first, you have to decide which item combinations for candidate models you want to test. You can choose from three approaches:
 
--   **Approach A) Test all item combinations with given scale lengths.** Use this approach if you don't have any theoretical considerations in mind that should be addressed by defining rules using the apply_combo_rules function. All item combinations will be tested that meet the number of items provided in the scale_length parameter. The scale_length parameter expects a numeric vector, e.g. c(4:8) for any item combinations with at least 4 and at most 8 items (see the examples for the combo_length parameter of the apply_combo_rules function above). If you do not set the scale_length parameter and do not provide pre-selected item combinations using the combos parameter (approaches B and C).
+-   **Approach A) Test all item combinations with given scale lengths.** Use this approach if you don't have any theoretical considerations in mind that should be addressed by defining rules using the apply_combo_rules function. All item combinations will be tested that meet the number of items provided in the scale_length parameter. The scale_length parameter expects a numeric vector, e.g. *c(4:8)* for any item combinations with at least 4 and at most 8 items (see the examples for the combo_length parameter of the apply_combo_rules function above). If you do not set the scale_length parameter and do not provide pre-selected item combinations using the combos parameter (approaches B and C), all possible item combinations will be tested with a minimum scale length of 8 to the maximum sclae length( number of items in the data.frame).
 
 -   **Approach B) Use pre-defined item combinations from the result of a previous call of the apply_combo_rules function** (see above). Use the results object from this call as the combos parameter.
 
--   **Approach C) Use results of a previous call of the exhaustive_tests function.** You can use the item combinations that passed a previous call for further tests. This is useful, if the previous call led to a greater number of candidate models that you want to reduce further. For example, you could use tests in the second run that you did not use in the first run. Or you could use stricter criteria in the second run (e.g. use other values for the upper and lower bound of itemfit indices, define a stricter level of significance, additionally set criteria for the z-standardized itemfit indices if you only used MSQ-based indices in the first run or use another split criterion for Anderson's LR Test or other external variables for the DIF-Tree analysis). Use the item combinations from the \$passed_combos list of the results objects of the first run for this approach.
+-   **Approach C) Use results of a previous call of the exhaustive_tests function.** You can use the item combinations that passed a previous call for further tests. This is useful, if the previous call led to a greater number of candidate models that you want to reduce further. For example, you could use tests in the second run that you did not use in the first run. Or you could use stricter criteria in the second run (e.g. use stricter values for the upper and lower bound of itemfit indices, define a stricter level of significance, additionally set criteria for the z-standardized itemfit indices if you only used MSQ-based indices in the first run or use another split criterion for Anderson's LR Test or other external variables for the DIF-Tree analysis). Use the item combinations from the \$passed_combos list of the results objects of the first run for this approach.
 
 Second, **specify the type of rasch models to fit** using the *modelType* parameter. For binary data use "RM" to fit dichotomous rasch models. For polytomous data you can choose between "PCM" for partial credit models or "RSM" for rating-scale rasch models.
 
@@ -93,9 +93,9 @@ This tests checks the itemfit indices using the itemfit() function of the eRm pa
 
 -   evaluate only MSQ fits (set *msq* parameter TRUE and *zstd* parameter FALSE) or only z-standardized fits(set *zstd* parameter TRUE and *msq* parameter FALSE) or both of them (set both parameters TRUE).
 
--   evaluate p-values of the chi-squared tests additionally to the fit indices above (set *use.pval* parameter TRUE. The level of significance is not to be set in the *itemfit_control* function but globally in using the *alpha* parameter of the *exhaustive_tests* function). You can also add a Bonferroni adjustment for the p-values (this also has to be set globaly for all tests in the *exhaustive tests*\_function by setting the *bonf* parameter TRUE).
+-   evaluate p-values of the chi-squared tests additionally to the fit indices above (set *use.pval* parameter TRUE. The level of significance is not to be set in the *itemfit_control* function but globally in using the *alpha* parameter of the *exhaustive_tests* function). You can also add a Bonferroni adjustment for the p-values (this also has to be set globally for all tests in the *exhaustive tests*\_function by setting the *bonf* parameter TRUE).
 
-You either can override any of the standard value set by *itemfit_control* with a call to that function (e.g. using *control= itemfit_control(outfits=F, zstd=T)* will evaluate infits only -- MSQ infits as well as z-standardized infits -- and will use all other parameters with their standard value). Or you can pass *itemfit_control* parameters directly to the *exhaustive_tests function* (e.g. use outfits=F as a parameter in a call to *exhaustive_tests*).
+You can either override any of the standard value set by *itemfit_control* with a call to that function (e.g. using *control= itemfit_control(outfits=F, zstd=T). This* will evaluate infits only -- MSQ infits as well as z-standardized infits -- and will use all other parameters with their standard value). Or you can pass *itemfit_control* parameters directly to the *exhaustive_tests function* (e.g. use outfits=F as a parameter in a call to *exhaustive_tests*).
 
 #### test_mloef
 
@@ -103,11 +103,11 @@ This test performs Martin-Löf tests using the *MLoef* function of *eRm*. The de
 
 #### test_LR
 
-This test performs Anderson's likelihood ratio tests using the *LRtest* function of *eRm*. Just like the *test_mloef* function a median split is the default split criterion and a custom split criterion can be used by providing a numerical vector with the parameter *splitcr_LR* to define the groups. This vector has to match the number of persons in the dset data.frame. Unlike in the *test_mloef function*, you can define more than two groups as custom split criterion , e.g. you can use "all.R" als a value for *splitcr_LR* to define groups based on the empirical rawscores. You also can use "mean" as a value for s*plitcr_LR* to split by mean. See the documentation of the *LRtest* function in *eRm* for more details. Candidate models pass this test if the null hypothesis is not rejected. The level of significance can be set globally for all tests by using the *alpha* parameter.
+This test performs Anderson's likelihood ratio tests using the *LRtest* function of *eRm*. Just like the *test_mloef* function a median split is the default split criterion and a custom split criterion can be used by providing a numerical vector with the parameter *splitcr_LR* to define the groups. This vector has to match the number of persons in the dset data.frame. Unlike in the *test_mloef function*, you can define more than two groups as custom split criterion , e.g. you can use "all.R" as a value for *splitcr_LR* to define groups based on the empirical rawscores. You also can use "mean" as a value for s*plitcr_LR* to split by mean. See the documentation of the *LRtest* function in *eRm* for more details. Candidate models pass this test if the null hypothesis is not rejected. The level of significance can be set globally for all tests by using the *alpha* parameter.
 
 #### threshold_order
 
-This tests checks if the item threshold locations (beta parameters) of each item are ordered. This is only relevant for polytomous data (*modelType* "PCM" or "RSM") and therefore is meaningless for binary data (*modelType* "RM").
+This test checks if the item threshold locations (beta parameters) of each item are ordered. This is only relevant for polytomous data (*modelType* "PCM" or "RSM") and therefore is meaningless for binary data (*modelType* "RM").
 
 #### test_waldtest
 
@@ -125,7 +125,11 @@ This test checks for differential item function using the *raschtree* function o
 
 ## 3. Example: Activities of daily living (binary data)
 
-Activities of daily living (ADL) is a concept used in geriatrics, gerontology, nursing and other health-care related professions that refers to clients' routine self-care activities. ADL measures are widely used as measures of functioning in different healthcare settings. ADLs are key components in healthcare payment systems in most countries. The concept was first developed by Katz. This ADL measure used six activities: bathing, dressing, toileting, transferring, bladder and bowel continence and eating. \[tbc\] In the ADL data that comes with the package there are 15 ADL items. The first six items address aspects of mobility (transferring, standing, walking and bed mobility). The next three items address personal hygiene (including taking a shower). There are two items for dressing, two items for eating/drinking and one item for toileting. We can subsume the last item (intimate hygiene) to toileting or to personal hygiene respectively. Let us assume that we want to construct an ADL index that preferably consists of at least one item for mobility, personal hygiene/dressing, eating/drinking and toileting. At least we do not want to overrepresented items that address the same activity. So we are only interested in scales that use at least one but not more than two items for each activity. We consider scale with at least four items and with a maximum of eight items. Additionally we do not want to have both of the first two items in the scale as both of them address transferring, and we want to avoid to have both "washing" items in the scale. We can set up these combination rules as follows:
+Activities of daily living (ADL) is a concept used in geriatrics, gerontology, nursing and other health-care related professions that refers to clients' routine self-care activities. ADL measures are widely used as measures of functioning in different healthcare settings. ADLs are key components in healthcare payment systems in most countries. The concept was first developed by Katz. This ADL measure used six activities: bathing, dressing, toileting, transferring, bladder and bowel continence and eating.
+
+***\< to be continued \>***
+
+In the ADL data that comes with the package there are 15 ADL items. The first six items address aspects of mobility (transferring, standing, walking and bed mobility). The next three items address personal hygiene (including taking a shower). There are two items for dressing, two items for eating/drinking and one item for toileting. We can subsume the last item (intimate hygiene) to toileting or to personal hygiene respectively. Let us assume that we want to construct an ADL index that preferably consists of at least one item for mobility, personal hygiene/dressing, eating/drinking and toileting. At least we do not want to overrepresented items that address the same activity. So, we are only interested in scales that use at least one but not more than two items for each activity. We consider scale with at least four items and with a maximum of eight items. Additionally, we do not want to have both of the first two items in the scale as both of them address transferring, and we want to avoid to have both "washing" items in the scale. We can set up these combination rules as follows:
 
 ```{r Define ombination rules (ADL example)}
 library(exhaustiveRasch)
