Description file changed

--- a/vignettes/Working_with_the_exhaustiveRasch_package.Rmd
+++ b/vignettes/Working_with_the_exhaustiveRasch_package.Rmd
@@ -75,7 +75,7 @@ Provide the data to analyze as a data.frame using the *dset* parameter.
 
 At first, you have to decide which item combinations for candidate models you want to test. You can choose from three approaches:
 
--   **Approach A) Test all item combinations with given scale lengths.** Use this approach if you don't have any theoretical considerations in mind that should be addressed by defining rules using the apply_combo_rules function. All item combinations will be tested that meet the number of items provided in the scale_length parameter. The scale_length parameter expects a numeric vector, e.g. *c(4:8)* for any item combinations with at least 4 and at most 8 items (see the examples for the combo_length parameter of the apply_combo_rules function above). If you do not set the scale_length parameter and do not provide pre-selected item combinations using the combos parameter (approaches B and C), all possible item combinations will be tested with a minimum scale length of 8 to the maximum sclae length( number of items in the data.frame).
+-   **Approach A) Test all item combinations with given scale lengths.** Use this approach if you don't have any theoretical considerations in mind that should be addressed by defining rules using the apply_combo_rules function. All item combinations will be tested that meet the number of items provided in the scale_length parameter. The scale_length parameter expects a numeric vector, e.g. *c(4:8)* for any item combinations with at least 4 and at most 8 items (see the examples for the combo_length parameter of the apply_combo_rules function above). If you do not set the scale_length parameter and do not provide pre-selected item combinations using the combos parameter (approaches B and C), all possible item combinations will be tested with a minimum scale length of 8 to the maximum scale length (number of items in the data.frame).
 
 -   **Approach B) Use pre-defined item combinations from the result of a previous call of the apply_combo_rules function** (see above). Use the results object from this call as the combos parameter.
 
