--- a/vignettes/Working_with_the_exhaustiveRasch_package.Rmd
+++ b/vignettes/Working_with_the_exhaustiveRasch_package.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Working with the exhaustiveRasch package"
-subtitle: "for package version 0.2.1"
+subtitle: "for package version 0.3.2"
 author: "Christian Grebe and Mirko Schürmann"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -239,13 +239,13 @@ This test checks if the item threshold locations (beta parameters) of each item 
 
 This test performs Wald tests using the *Waldtest* function of *eRm*. The default split criterion is split by median. You can define other split criteria by using the *splitcr_wald* argument, use "mean" to split the individuals by the mean of their raw scores. You can also define a custom split criterion by providing a numeric vector that assigns every person to one of two groups. This vector has to match the number of persons in the dset data.frame. See the documentation of the *Waldtest* function in *eRm* for more details. Candidate models pass this test if the null hypothesis is not rejected. The level of significance can be set globally for all tests by using the *alpha* argument and a bonferroni correction can be used by setting the *bonf* argument TRUE.
 
-Note that the default split criterion, the median split, is not useful for ordinal models (PCM and RSM), because items are eliminated if they do not have the same number of categories in each subgroup. In *exhaustiveRasch*, item combinations are considered as not passing test test in this case. The authors of the eRm package suggest to use eigher a random split or a custom (external) split criterion in these cases. We recommend using the Waldtest for PCM and RSM with an external split criterion (to be passed in the argument *splitcr_wald*), as a random split is not very helpful for the analysis.
+Note that the default split criterion, the median split, is not useful for ordinal models (PCM and RSM), because items are eliminated if they do not have the same number of categories in each subgroup. In *exhaustiveRasch*, item combinations are considered as not passing test test in this case. The authors of the eRm package suggest to use either a random split or a custom (external) split criterion in these cases. We recommend using the Waldtest for PCM and RSM with an external split criterion (to be passed in the argument *splitcr_wald*), as a random split is not very helpful for the analysis.
 
-Also note that the Waldtest currently leads to different results depending on how the arguments for *estimation_param* (via the *estimation_control()* function) are selected. If *sum0=TRUE* (for *est="psychotools"* this is always the case), then the first beta parameter of the model is 0. This also applies to the submodels of the Wald test, which is why no p-value can be calculated for the first item category (NaN). If this is the only item category with NaN for the p-value (and no p-value is below the local alpha), e*xhaustiveRasch* considers the test to be passed. Behaviour as in eRm requires *est="eRm"* (which will result in longer computation times) and *sum0=TRUE*.
+When using pairwise or psychotools as estimation method, the parameter *icat_wald* is available. If this parameter is set TRUE, the item category parameters will be used, if set FALSE, the item parameters (sigma) are used.
 
 #### test_DIFtree
 
-This test checks for differential item function using the *raschtree* function of the *psychotree* package (the *rstree* or *pctree* function respectively, depending on *modelType*; Strobl et al. 2015, Komboz et al., 2018). You can use several external variables at once that can be binary, as well as categorical or continuous. Provide the external variables as a data.frame using the *DIFvars* argument. The function builds decision trees. Nodes in the tree indicate differential item functioning for the split point that defines the actual tree node. See the documentation on the function rstree, pctree and rstree in pschotree for more details. Candidate models pass this test if the number of tree nodes is 1.
+This test checks for differential item function using the *raschtree* function of the *psychotree* package (the *rstree* or *pctree* function respectively, depending on *modelType*; Strobl et al. 2015, Komboz et al., 2018). You can use several external variables at once that can be binary, as well as categorical or continuous. Provide the external variables as a data.frame using the *DIFvars* argument. The function builds decision trees. Nodes in the tree indicate differential item functioning for the split point that defines the actual tree node. See the documentation on the function rstree, pctree and rstree in psychotree for more details. Candidate models pass this test if the number of tree nodes is 1.
 
 #### test_personsItems
 
@@ -277,7 +277,7 @@ The default alpha value for hypothesis tests is 0.1, because we are interested i
 
 To help speeding up the analyses, the performed tests are parallelised, which means, that the computations will be split over the cores of your cpu. By default, all of your cpu cores will be used, but you can change that behavior by defining the number of cores to hold out in the ***ignoreCores*** argument. This can be useful if you want to perform a computationally intensive analysis (e.g. polytomous models with a large number of item combinations), but still want to work productively on this machine.
 
-You can customize aspects of parameter estimation using arguments of *estimation_control()* in the ***estimation_param*** argument. You can override the default parameters with a call to this function and providing the argument(s) to override. The *est* argument defines wheter to use the respective functions of the eRm package (value *"eRm"*) or the much faster functions of the package *psychotools* (value *"psychotools"*) for the estimating the item parameters. If "*eRm"* is used, you can also choose, if the item parameters should start with 0 (*sum0=FALSE*) or if they should be summed to be 0 (*sum0=TRUE*). Using *"psychotools"* in the *est* argument will always set *sum0=FALSE*. With the boolean argument *se* you can opt for not calculating standard errors for the item parameters (*se=FALSE*). Note that some tests rely on the standard errors. If they are part of the tests argument, the *se* argument will automatically be set as TRUE. If you provide an object of class *passed_exRa* containing previously fit models that were estimated without standard errors, the models will be re-estimated, if one of the chosen tests relies on standard errors (or on the Hessian matrix, respectively). The arguments est, se and sum0 can also be used directly when calling exhaustive_tests. Arguments not provided will then be set to the default values.
+You can customize aspects of parameter estimation using arguments of *estimation_control()* in the ***estimation_param*** argument. You can override the default parameters with a call to this function and providing the argument(s) to override. The *est* argument defines wheter to use the parameter estimation and the respective functions for model tests of the eRm package (value *"eRm"*), of the package *psychotools* (with our functions for model tests, value *"psychotools"*) or of the package pairwise (value *"pairwise"*). If "*eRm"* is used, you can also choose, if the item parameters should start with 0 (*sum0=FALSE*) or if they should be summed to be 0 (*sum0=TRUE*). Using *"psychotools"* or *"pairwise"* in the *est* argument will always set *sum0=FALSE*. With the boolean argument *se* you can opt for not calculating standard errors for the item parameters (*se=FALSE*). Note that some tests rely on the standard errors. If they are part of the tests argument, the *se* argument will automatically be set as TRUE. If you provide an object of class *passed_exRa* containing previously fit models that were estimated without standard errors, the models will be re-estimated, if one of the chosen tests relies on standard errors (or on the Hessian matrix, respectively). The arguments est, se and sum0 can also be used directly when calling exhaustive_tests. Arguments not provided will then be set to the default.
 
 If you do not want to trace the process of the analysis, you can set the ***silent*** argument TRUE to avoid these Outputs to the console.
 
@@ -285,11 +285,12 @@ If you do not want to trace the process of the analysis, you can set the ***sile
 
 The object returned by the *exhaustive_tests* function is an S4 class of the type *passed_exRa*. This class consists of the following slots (because of the S4 class the slot have to be addressed by using \@ rather than \$):
 
--   ***process***: data.frame with information about the process of the analysis (e.g. number of the passed item combinations after each test) u.a)
+-   ***process***: data.frame with information about the process of the analysis (e.g. number of the passed item combinations after each test)
 -   ***passed_combos***: list of vectors of the passed item combinations
--   ***passed_models***: list of the fit rasch model objects (of the class RM, PCM or RSM) for each of the passed item combinations
+-   ***passed_models***: list of the fit rasch model objects. The structure and class depends on the estimation method (eRm, pairwise, psychotools) and the modelType (RM, PCM, RSM)
+-   ***passed_p.par:*** an object (list) of the person parameters, depending on the package used for parameter estimation. For eRm, this is the result of eRm::person.parameter(), and for pairwise this is the result of pairwise::pers(). For psychotools, the object comprises person parameters, itemfit indices, rasch residuals and the pesron speration index (PSI)
 -   ***data***: data.frame containing the data used for the analysis
--   ***IC***: information criteria (AIC, BIC, cAIC) for each of the remaining rasch models
+-   ***IC***: information criteria (AIC, BIC, cAIC) for each of the remaining rasch models (only if *ICs=TRUE* in *exhaustive_tests*)
 -   ***timings***: data.frame containing the runtime of each test
 
 The ***summary*** method for an object of the *passed_exRa* class delivers information about:
@@ -308,7 +309,19 @@ The ***summary*** method for an object of the *passed_exRa* class delivers infor
 
 Depending of your data and the test criteria used for the *exhaustive_tests()* function, you probably will have a certain number of item combinations left in the *passed_exRa* object, that passed all of your tests. Among these item combinations you will likely have some combinations that represent a subset of another item combination (for example items 1-2-3-4 as well as items 1-2-3-4-6 and 1-2-3-4-9). You can use the *remove_subsets()* function to remove either all subsets of a larger superset or vice versa. This function requires two arguments: Provide your object of class *passed_exRA* in the *obj* argument and set the *keep_longest* argument FALSE (default), if you want to keep the subsets and remove all supersets that contain all items of this subset (principle of economy). If you set *keep_longest* TRUE, the longer superset will be kept and all subsets consisting of a subset of this superset will be removed (principle of maximizing information).
 
-## 3. Datasets
+## 3. Differences between the estimation methods
+
+In addition to *eRm*, exhaustiveRasch also supports parameter estimations with the *psychotool*s package since version 0.2.1 (with fundamental changes since version 0.3.1), and since version 0.3.1 also the *pairwise* package.
+
+The *eRm* and *psychotools* packages both use conditional maximum likelihood estimation (CML) for parameter estimation, while *pairwise* does not estimate the parameters, but calculates them explicitly using the pairwise procedure. For this reason, the results of the model tests differ between *pairwise* and the other two packages.
+
+Since the log-likelihood in *pairwise* is not the same as that from CML estimations due to the simultaneous calculation of the item and person parameters, a Martin-Löf test is not meaningful in pairwise and is therefore not supported. If *test-mloef* is among the tests, it is skipped in the case of pairwise and a corresponding message is issued. Additionally, tests for rating scale models (RSM) are not supported by the *pairwise* package.
+
+In principle, one would expect that the model tests in *eRm* and *psychotools* would produce identical results, since both packages use the same estimation method (CML). However, this is not always the case for various reasons. *eRm* carries out extensive data checks, in particular checking for an ill conditioned data matrix in dichotomous models. If such a matrix is present, the item (or several items) in question are not taken into account in the estimation of the model. exhaustiveRasch excludes these cases from further analysis because the model was not adjusted for the actually intended item combination. Therefore, even with the *no_test* test in dichotomous models (*modelType*="RM"), item combinations can be excluded when estimating with *eRm*. The same applies to the likelihood ratio test (*test_LR*), regardless of the *modelType*. *pairwise* and our tests for *psychotools* do not perform these data checks, which consequently leads to (intentional) differences in the results. *test_waldtest* also produces different results for *eRm* and *psychotools*. If i*cat=FALSE* is set, this applies anyway, since *psychotools* (and also *pairwise*) then uses the item parameters, while *eRm* always uses the item category parameters. The estimated item category parameters are also not identical in eRm and psychotools. For tests that also include the person parameters (or in the case of test_mloef the log-likelihood), this is not relevant, but for *test_waldtest* it is. In addition, in rare cases, due to different rounding, there may be minimal differences in the other model tests between *eRm* and *psychotools*, which is relevant if the selected criterion is either just met or not met (e.g. p-value in *test_mloef*).
+
+Unlike *eRm,* *psychotools* and *pairwise* support a random split as split criteria for *test_waldtest,* *test_lr* and *test_mloef* (*psychotools* only), even if this is usually not very meaningful.
+
+## 4. Datasets
 
 Currently, the package comes with three datasets:
 
@@ -320,7 +333,7 @@ Currently, the package comes with three datasets:
 
 All of these datasets come with socio-demographic overhead variables that can be used for analyses of differential item functioning. See the package documentation for item labels and answer categories.
 
-## 4. Example: Activities of daily living (binary data)
+## 5. Example: Activities of daily living (binary data)
 
 Activities of daily living (ADL) is a concept used in geriatrics, gerontology, nursing and other health-care related professions that refers to clients' routine self-care activities. ADL measures are widely used as measures of functioning in different healthcare settings. ADLs are key components in healthcare payment systems in most countries. The concept was first developed by Katz (Katz et al. 1963). This ADL measure used six activities: bathing, dressing, toileting, transferring, bladder and bowel continence and eating. The widely used ADL index of the Ressource Utilization Groups comprises
 
@@ -375,7 +388,7 @@ passed_rem <- remove_subsets(passed_ADL2, keep_longest=F)
 
 This procedure removes two item combinations, leaving 7.
 
-## 5. Computation time and considerations for the sequence of tests
+## 6. Computation time and considerations for the sequence of tests
 
 Estimating the person parameters of Rasch models is computationally expensive, especially with an increasing number of model parameters. Despite the distribution of the calculations to (up to) all available CPU cores due to the parallelization used in the exhaustiveRasch package, the execution of the model tests including the verification of the applied criteria can require long computing times. This is particularly important for PCM models with many model parameters (number of items and response categories).
 
